--- a/index.html
+++ b/index.html
@@ -2,31 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>  
-    <link rel="stylesheet" href="main.css"/>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <div class="app-wrap">
-        <header>
-            <input type="text" autocomplete="off" class="search-box" placeholder="Search for a city..."/>
-        </header>  
-
-        <main>
-            <div class="location">
-                <div class="city">Delhi, IN</div>
-                <div class="date">Sun 01 January 2021</div>
+    <div class="container">
+        <div class="weather_header">
+            <form class="weather_search">
+                <input type="text" placeholder="Search for a city." class="weather_searchform">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </form>
+            <div class="weather_units">
+                <span class="weather_unit_celsius">&#176C</span>
+                <span class="weather_unit_farenheit">&#176F</span>
             </div>
-            <div class="current">
-                <div class="temp">32<span>&deg;c</span></div>
-                <div class="weather">Sunny</div>
-                <div class="hi-low">29&deg;c / 33&deg;c</div>
+        </div>
+        <div class="weather_body">
+            <h1 class="weather_city"></h1>
+            <div class="weather_datetime">
+                <p></p>
             </div>
-        </main>
-    </div>  
+            <div class="weather_forecast">
+                <p>Clear</p>
+            </div>
+            <div class="weather_icon">
+               
+            </div>
+            <p class="weather_temperature"></p>
+            <div class="weather_minmax">
+                <p>Min: 12&#176</p>
+                <p>Max: 16&#176</p>
+            </div>
+        </div>
 
-    <script src="main.js"></script>
-
+        <div class="weather_info">
+            <div class="weather_card">
+                <i class="fa-solid fa-temperature-full"></i>
+                <div>
+                    <p>Real Feel</p>
+                    <p class="weather_realfeel">18&#176</p>
+                </div>
+            </div>
+            <div class="weather_card">
+                <i class="fa-solid fa-droplet"></i>
+                <div>
+                    <p>Humidity</p>
+                    <p class="weather_humidity">18&#176</p>
+                </div>
+            </div>
+            <div class="weather_card">
+                <i class="fa-solid fa-wind"></i>
+                <div>
+                    <p>Wind</p>
+                    <p class="weather_wind">18&#176</p>
+                </div>
+            </div>
+            <div class="weather_card">
+                <i class="fa-solid fa-guage-high"></i>
+                <div>
+                    <p>Pressure</p>
+                    <p class="weather_pressure">18&#176</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/af9d180e3b.js" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
